pvmol-gen/logs/smilesx_preempt_v2.err

Lmod is automatically replacing "nvidia/25.5" with "gcc-native/14".


Lmod is automatically replacing "PrgEnv-nvidia/8.6.0" with "PrgEnv-gnu/8.6.0".


Due to MODULEPATH changes, the following have been reloaded:
  1) cray-mpich/9.0.1

  File "<string>", line 1
    import tensorflow as tf; print(f"TF {tf.__version__}, GPUs: {len(tf.config.list_physical_devices(\"GPU\"))}")
                                                                                                                ^
SyntaxError: f-string expression part cannot include a backslash
=>> PBS: job killed: walltime 3626 exceeded limit 3600
